[package]
name = "harmony-hacker"
version = "0.1.0"
edition = "2021"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = "thin"

[dependencies]
anyhow = "1"
lazy_static = "1"
tracing = "0.1"
# todo: keep only what is really used
symphonia = { version = "0.5.4", features = ["all"] }
symphonia-opus = { path = "../symphonia-opus" }
rustfft = "6.2"
realfft = "3"
# Keep only what is really used to keep binary small and compilation fast
bevy = { version = "0.13", default-features = false, features = [
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_render",
  "bevy_sprite",
  "multi-threaded",
  # Might be used in the future
  # "bevy_audio",
  # "bevy_text",
  # "bevy_ui",
  # "default_font",
  # "wayland", # For linux support on CI
  # "webgl2", # For wasm support
  # "png", # For image loading
] }
bevy_egui = "0.27"

[dev-dependencies]
pretty_assertions = "1"
